# which-profiler

./: .gitignore  LICENSE  README.md  hk.pkl  mise.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/image_analysis/: README.md  a_pure_python.py  b_csv_load.py  c_hdf5_load.py  d_dtypes.py  diff.sh  e_chunked.py  f_jit.py  g_server.py  generate_data.py  pyproject.toml
examples/image_analysis/tests/: test_examples.py
scripts/: test-matrix.sh
src/which_profiler/: __init__.py  catalog.py  cli.py  preflight.py
talk/: walkthrough.md
tests/: test_a_pure_python.py  test_catalog.py  test_cli.py  test_filters.py
