[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "which-profiler"
version = "0.0.1"
description = "Which profiler, when? Find out at EuroPython 2026!"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["profiling", "performance", "europython"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://ep2026.europython.eu"

[project.scripts]
which-profiler = "which_profiler:main"

[tool.hatch.build.targets.wheel]
packages = ["src/which_profiler"]
